--- a/Genesis_web/new.html
+++ b/Genesis_web/new.html
@@ -53,17 +53,19 @@
     <!--<h1>Our Courses</h1>-->
     <div class="subject">
         <a id = 'courses'></a>
-        <div class="Python">
-            <h2>Python</h2>
-        </div>
+        
+            <div class="Python">
+                <a href="uk/indexp.html" ><h2>Python</h2></a>
+            </div>
+        
 
-        <div class="fullstack">
-            <h2>Fullstack Development</h2>
-        </div>
+            <div class="fullstack">
+                <a href="uk/indexfs.html" ><h2>Fullstack Development</h2></a>
+            </div>
 
-        <div class="ai">
-            <h2>Artificial Intelligence</h2>
-        </div>
+            <div class="ai">
+                <a href="uk/indexai.html" ><h2>Artificial Intelligence</h2></a>
+            </div>
     </div>
 
     <div class="contact">
@@ -85,6 +87,7 @@
             <h2>Social Media</h2>
             <div class="facebook">
                 <a href="https://www.facebook.com/genesistrainings/" target="_blank"><p>Facebook</p></a>
+                <a href="https://www.facebook.com/genesistrainings/" class="icon fa-facebook"></a>
             </div>
             <div class="insta"><a href="https://wa.me/918088205230" target="_blank"><p>WhatsApp</p></a></div>
             <div class="linkedin">
