--- a/Genesis_web/new.html
+++ b/Genesis_web/new.html
@@ -52,20 +52,22 @@
     </div>
     <!--<h1>Our Courses</h1>-->
     <div class="subject">
-        <a id = 'courses'></a>
-        
+        <!-- <a id = 'courses'></a> -->
+        <a href="uk/indexp.html" >
             <div class="Python">
-                <a href="uk/indexp.html" ><h2>Python</h2></a>
+                <h2>Python</h2>
             </div>
-        
-
+        </a>
+        <a href="uk/indexfs.html" >
             <div class="fullstack">
-                <a href="uk/indexfs.html" ><h2>Fullstack Development</h2></a>
+                h2>Fullstack Development</h2>
             </div>
-
+        </a>
+        <a href="uk/indexai.html" >
             <div class="ai">
-                <a href="uk/indexai.html" ><h2>Artificial Intelligence</h2></a>
+                <h2>Artificial Intelligence</h2>
             </div>
+        </a>
     </div>
 
     <div class="contact">
