--- a/Genesis_web/new.html
+++ b/Genesis_web/new.html
@@ -60,7 +60,7 @@
         </a>
         <a href="uk/indexfs.html" >
             <div class="fullstack">
-                h2>Fullstack Development</h2>
+                <h2>Fullstack Development</h2>
             </div>
         </a>
         <a href="uk/indexai.html" >
