--- a/Genesis_web/new.html
+++ b/Genesis_web/new.html
@@ -70,9 +70,10 @@
             </div>
         </a>
     </div>
-
+    <footer>
     <div class="contact">
         <div id="map-tile">
+            <h2>Location</h2>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31112.256514714918!2d77.62301141624958!3d12.905659752816577!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2f26b55a6b35c11b!2sGenesis+Trainings!5e0!3m2!1sen!2sin!4v1559021585715!5m2!1sen!2sin" width="95%" height="150" frameborder="0" style="border:0" allowfullscreen></iframe>
             <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.675372390488!2d-76.71386218529199!3d39.3635874269356!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c81a14e7817803%3A0xab20a0e99daa17ea!2sDavid+Chu&#39;s+China+Bistro!5e0!3m2!1sen!2sus!4v1452824864156" width="75%" height="150" frameborder="0" style="border:0" allowfullscreen></iframe> -->
             <!-- <span>map</span> -->
@@ -108,7 +109,7 @@
             </ul>
         </div>
     </div>
-    <footer>
+    
         <p>Genesis Trainings &copy; 2019</p>
     </footer>
 
