--- a/Genesis_web/uk/indexp.html
+++ b/Genesis_web/uk/indexp.html
@@ -19,7 +19,7 @@
 				<!-- <h1><strong><a href="index.html">Spatial</a></strong> by Templated</h1> -->
 				<nav id="nav">
 					<ul>
-						<li><a href="../new.html">Home</a></li>
+						<li><a href="../index.html">Home</a></li>
 						<!-- <li><a href="generic.html">Generic</a></li> -->
 						<!-- <li><a href="elements.html">Elements</a></li> -->
 					</ul>
